@@ -23,7 +23,7 @@ public class LambdaJspTest extends AbstractMainTest
     @Test
     public void canServeJspWithLambda() throws Exception
     {
-        String expected = String.format("<dt>os.version</dt><dd>%s</dd>", System.getProperty("os.version"));
+        String expected = "<dt>os.version</dt><dd>%s</dd>".formatted(System.getProperty("os.version"));
 
         assertThat(resourceWithUrl("http://localhost:8080/test/lambda.jsp"), containsString(expected));
     }
